--- a/ListenUp/Base.lproj/Main.storyboard
+++ b/ListenUp/Base.lproj/Main.storyboard
@@ -251,6 +251,116 @@
             </objects>
             <point key="canvasLocation" x="3713.04347826087" y="99.776785714285708"/>
         </scene>
+        <!--New Post View Controller-->
+        <scene sceneID="8is-m8-Hlk">
+            <objects>
+                <viewController storyboardIdentifier="PostViewController" id="LJt-af-076" customClass="NewPostViewController" customModule="ListenUp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="J1V-xV-kNo">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="HjX-Np-ktD">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="MPe-64-pOG">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ResultTableViewCell" rowHeight="183" id="vhB-pl-RtH" customClass="ResultTableViewCell" customModule="ListenUp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="88.5" width="414" height="183"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vhB-pl-RtH" id="wcV-Dk-Q0r">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="183"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blurred rice box copy" translatesAutoresizingMaskIntoConstraints="NO" id="qMc-4q-NNR">
+                                                    <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="qMc-4q-NNR" secondAttribute="height" multiplier="1:1" id="46I-uG-mft"/>
+                                                        <constraint firstAttribute="height" relation="lessThanOrEqual" constant="80" id="E4h-4U-Lzt"/>
+                                                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="80" id="USU-Oq-CD5"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9uP-Y6-n2x" userLabel="labelsView">
+                                                    <rect key="frame" x="88" y="4" width="273" height="175"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Track Name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q4n-Td-9pL">
+                                                            <rect key="frame" x="0.0" y="29" width="273" height="142"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m0r-6q-fM5">
+                                                            <rect key="frame" x="0.0" y="4" width="273" height="21"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="21" id="1kZ-YH-B9x"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="m0r-6q-fM5" firstAttribute="top" secondItem="9uP-Y6-n2x" secondAttribute="top" constant="4" id="4mG-GW-Ap6"/>
+                                                        <constraint firstAttribute="bottom" secondItem="Q4n-Td-9pL" secondAttribute="bottom" constant="4" id="8ef-bx-DpC"/>
+                                                        <constraint firstItem="Q4n-Td-9pL" firstAttribute="top" secondItem="m0r-6q-fM5" secondAttribute="bottom" constant="4" id="EJf-AB-gQV"/>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="72" id="Sps-D8-gFZ"/>
+                                                        <constraint firstItem="Q4n-Td-9pL" firstAttribute="top" secondItem="m0r-6q-fM5" secondAttribute="bottom" constant="4" id="TRU-uU-7My"/>
+                                                        <constraint firstItem="m0r-6q-fM5" firstAttribute="leading" secondItem="9uP-Y6-n2x" secondAttribute="leading" id="vY8-1y-4ey"/>
+                                                        <constraint firstAttribute="trailing" secondItem="m0r-6q-fM5" secondAttribute="trailing" id="vy3-Qj-zc2"/>
+                                                        <constraint firstItem="Q4n-Td-9pL" firstAttribute="leading" secondItem="9uP-Y6-n2x" secondAttribute="leading" id="x1M-Sn-RUx"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Q4n-Td-9pL" secondAttribute="trailing" id="yLH-NR-rhT"/>
+                                                    </constraints>
+                                                </view>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="paperplane" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="82h-vY-ae3">
+                                                    <rect key="frame" x="369" y="20.5" width="25" height="25"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="25" id="S9w-j6-B6p"/>
+                                                        <constraint firstAttribute="height" constant="25.5" id="SGA-r9-7Gu"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="qMc-4q-NNR" firstAttribute="top" secondItem="wcV-Dk-Q0r" secondAttribute="top" id="07S-Ev-Kd8"/>
+                                                <constraint firstItem="qMc-4q-NNR" firstAttribute="leading" secondItem="wcV-Dk-Q0r" secondAttribute="leading" id="B7h-2r-IFn"/>
+                                                <constraint firstAttribute="trailing" secondItem="82h-vY-ae3" secondAttribute="trailing" constant="20" id="J9V-Nt-CTt"/>
+                                                <constraint firstItem="9uP-Y6-n2x" firstAttribute="top" secondItem="wcV-Dk-Q0r" secondAttribute="top" constant="4" id="MIV-Lq-1Vt"/>
+                                                <constraint firstItem="9uP-Y6-n2x" firstAttribute="leading" secondItem="qMc-4q-NNR" secondAttribute="trailing" constant="8" id="P1J-eK-Xs9"/>
+                                                <constraint firstItem="82h-vY-ae3" firstAttribute="leading" secondItem="9uP-Y6-n2x" secondAttribute="trailing" constant="8" id="jeX-m3-2Yo"/>
+                                                <constraint firstItem="82h-vY-ae3" firstAttribute="top" secondItem="wcV-Dk-Q0r" secondAttribute="top" constant="20" id="r2s-fE-olu"/>
+                                                <constraint firstAttribute="bottom" secondItem="9uP-Y6-n2x" secondAttribute="bottom" constant="4" id="yt7-0g-8ea"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="albumArtworkView" destination="qMc-4q-NNR" id="bCh-nc-dkN"/>
+                                            <outlet property="artistNameLabel" destination="m0r-6q-fM5" id="DJq-Vy-faZ"/>
+                                            <outlet property="postSymbol" destination="82h-vY-ae3" id="ur2-EW-8JQ"/>
+                                            <outlet property="trackNameLabel" destination="Q4n-Td-9pL" id="pYp-Ux-Ri1"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="hAt-vh-Y9w"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="HjX-Np-ktD" secondAttribute="bottom" id="DbO-lC-ftA"/>
+                            <constraint firstItem="HjX-Np-ktD" firstAttribute="top" secondItem="J1V-xV-kNo" secondAttribute="top" id="MW4-rb-FvB"/>
+                            <constraint firstItem="HjX-Np-ktD" firstAttribute="trailing" secondItem="hAt-vh-Y9w" secondAttribute="trailing" id="iJW-GB-cG9"/>
+                            <constraint firstItem="HjX-Np-ktD" firstAttribute="leading" secondItem="hAt-vh-Y9w" secondAttribute="leading" id="kcc-bL-xGZ"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="searchBar" destination="MPe-64-pOG" id="B3p-WG-B6K"/>
+                        <outlet property="tableView" destination="HjX-Np-ktD" id="XLh-Vl-eRE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zTi-QP-gtW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4650.7246376811599" y="99.776785714285708"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="78N-Bj-Jta">
             <objects>
@@ -384,6 +494,7 @@
         <image name="chevron.down" catalog="system" width="128" height="72"/>
         <image name="chevron.up" catalog="system" width="128" height="72"/>
         <image name="heart" catalog="system" width="128" height="109"/>
+        <image name="paperplane" catalog="system" width="128" height="118"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
